--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <div class="col-lg-6 col-6">
             <img src="img/camperas.jpg" class="img-fluid" alt="" width="250" height="450">
             <div class="col-lg-6 col-6">
-              <h4>Campera de cuero</h4>
+              `<h4> Pantalon Brown</h4><h4>Campera de cuero</h4>
             </div>
           </div>    
           <div class="row">
@@ -121,7 +121,7 @@
         </div>
         <footer class="row">
           <div class="col-lg-2 col-2">
-            <img src="img/Rose Gold Black Elegant Luxury Circle Beauty Logo.png" class="img-fluid" alt="">
+            <img src="img/Rose Gold Black Elegant Luxury Circle Beauty Logo.png" class="img-fluid" alt="" width="100" height="100">
           </div>
           <div class="col-lg-4 col-12">
             <h3> Redes Sociales </h3>
