--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,28 +8,29 @@
     rel="stylesheet" 
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
     crossorigin="anonymous">
+    <body class="bg-light">
   </head>
   <body>
     <div class="container-fluid">
       <header class="row">
          <div class="col-lg-12 col-12">
             <!-- LOGO + NAV -->
-            <nav class="navbar navbar-expand-lg bg-light">
+            <nav class="navbar navbar-expand-lg bg-secondary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">AMORE</a>
+    <a class="navbar-brand" href="#"><img src="img/Rose Gold Black Elegant Luxury Circle Beauty Logo.png" alt="logo" width="50" height="50"> </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarScroll">
       <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Iniciar Sesión</a>
+          <a class="nav-link active fs-5" aria-current="page" href="#">Iniciar Sesión</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">NOVEDADES</a>
+          <a class="nav-link active fs-5" aria-current="page" href="#">NOVEDADES</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle active" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle active fs-5" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             PRODUCTOS
           </a>
           <ul class="dropdown-menu">
@@ -41,17 +42,17 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">CONTACTO</a>
+          <a class="nav-link active fs-5" aria-current="page" href="#">CONTACTO</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+      <form class="d-flex" role="Buscar">
+        <input class="form-control me-2" type="Buscar" placeholder="Buscar" aria-label="Buscar">
+        <button class="btn btn-dark" type="submit">Buscar</button>
       </form>
     </div>
   </div>
 </nav>
-          
+        <!-- CARRUSEL -->  
          </div>
         </header>
         <div class="row">
@@ -64,24 +65,24 @@
               </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-              <img src="img/muro rosa.jpg" class="d-block w-100" alt="..." width="100" height="600" > 
+              <img src="img/rulos canva.png" class="d-block w-100" alt="..." width="100" height="400" > 
                 <div class="carousel-caption d-none d-md-block">
-                <h5> AMORE </h5>
-                <p>SOY EL PUTO AMO</p>
+                <h1 class="text-center text-dark"> AMORE </h1>
+                <h3 class="text-center text-dark">TU TIENDA - TU LUGAR</h3>
                 </div>
               </div>
             <div class="carousel-item">
-              <img src="img/tendencias.jpg" class="d-block w-100" alt="..." width="100" height="600" >
+              <img src="img/Mujeres.png" class="d-block w-100" alt="..." width="100" height="400" >
                 <div class= "carousel-caption d-none d-md-block" >
-              <h5>CHORIANDO</h5>
-              <p>ESTAN MEDIAS CHUEKAS ESTAS GORDAS</p>
+              <h1 class="text-light">NOVEDADES</h1>
+              <h6>COLECCIÓN OTOÑO-INVIERNO 2023</h6>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="img/sombrero mujer.jpg" class="d-block w-100" alt="..." width="100" height="600" >
+              <img src="img/Sombrero.png" class="d-block w-100" alt="..." width="100" height="400" >
               <div class="carousel-caption d-none d-md-block">
-              <h5>CACHABACHA</h5>
-              <p>TRUCAZO PARA QUE NO SE TE VEA LA CARA DE TROLASA</p>
+              <h1 class="text-dark">ESTILO</h1>
+              <h6 class="text-dark">TU PERSONALIDAD A LA VISTA</h6>
               </div>
             </div>
           </div>
@@ -96,39 +97,183 @@
 </div>
           </div>
         </div>
+        <!-- ENCABEZADO -->
         <div class="row">
           <div class="col-lg-12 col-12">
-            <!-- ENCABEZADO -->
-            <div class="col-lg-12 col-12">
-            <img src="img/3-y-6-cuotas.png" class="img-fluid" alt="" width="300" height="500">
+            <div class="row">
+              <div class="col-lg-12 col-12">
+                <div class="card bg-danger">
+                  <div class="card-body">
+                    <h5 class="card-title text-center text-light">ACEPTAMOS TODOS LOS MEDIOS DE PAGOS</h5>
+                    <p class="card-text text-center text-light">LOS MIERCOLES Y JUEVES PAGÁ HASTA EN 6 CUOTAS SIN INTERÉS CON VIUMI</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+        </div>
+        <!-- TARJETAS DE PRODUCTO -->
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="card bg-dark">
+                <img src="img/look1.jfif" alt="Producto 1" class="card-img-top">
+                <div class="card-body">
+                  <h3 class="card-title text-light">Casual</h3>
+                  <p class="card-text text-light">Outfit para todos los dias</p>
+                  <p class="precio text-light">$39.999</p>
+                  <button class="btn btn-info">Lo quiero!</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="card bg-dark">
+                <img src="img/look2.jfif" alt="Producto 2" class="card-img-top">
+                <div class="card-body">
+                  <h3 class="card-title text-light">Remera Pato</h3>
+                  <p class="card-text text-light">Remera de algodon</p>
+                  <p class="precio text-light">$3000</p>
+                  <button class="btn btn-info">Me interesa!</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="card bg-dark">
+                <img src="img/look3.jfif" alt="Producto 3" class="card-img-top">
+                <div class="card-body">
+                  <h3 class="card-title text-light">Pantalon campana</h3>
+                  <p class="card-text text-light">Combinalo con tu estilo</p>
+                  <p class="precio text-light">$12.599</p>
+                  <button class="btn btn-info">Lo deseo!</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="card bg-dark">
+                <img src="img/look4.jfif" alt="Producto 4" class="card-img-top">
+                <div class="card-body">
+                  <h3 class="card-title text-light">Blazer coral</h3>
+                  <p class="card-text text-light">Me voy a la ofi, me voy al club</p>
+                  <p class="precio text-light">$19.299</p>
+                  <button class="btn btn-info">Lo necesito!</button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-6 col-6">
-            <img src="img/pantalones.jpg" class="img-fluid" alt="" width="250" height="450">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="card bg-dark">
+                <img src="img/look6.jpg" alt="Producto 1" class="card-img-top">
+                <div class="card-body">
+                  <h3 class="card-title text-light">Musculosa verde</h3>
+                  <p class="card-text text-light">Para usar con todo! algodon 100%</p>
+                  <p class="precio text-light">$2500</p>
+                  <button class="btn btn-info">Le amo!</button>
+                </div>
+              </div>
             </div>
-          <div class="col-lg-6 col-6">
-            <img src="img/camperas.jpg" class="img-fluid" alt="" width="250" height="450">
-            <div class="col-lg-6 col-6">
-              `<h4> Pantalon Brown</h4><h4>Campera de cuero</h4>
+            <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="card bg-dark">
+                <img src="img/look7.jpg" alt="Producto 2" class="card-img-top">
+                <div class="card-body">
+                  <h3 class="card-title text-light">Vestido algodon</h3>
+                  <p class="card-text text-light">para todo el dia/para toda la noche</p>
+                  <p class="precio text-light">$19.999</p>
+                  <button class="btn btn-info">Me lo merezco!</button>
+                </div>
+              </div>
             </div>
-          </div>    
+            <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="card bg-dark">
+                <img src="img/look8.jpg" alt="Producto 3" class="card-img-top">
+                <div class="card-body">
+                  <h3 class="card-title text-light">Blusa otoño</h3>
+                  <p class="card-text text-light">Ideal para un evento tranqui</p>
+                  <p class="precio text-light">$8.700</p>
+                  <button class="btn btn-info">Será mío!</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="card bg-dark">
+                <img src="img/look9.jpg" alt="Producto 4" class="card-img-top">
+                <div class="card-body">
+                  <h3 class="card-title text-light">Saco otoño</h3>
+                  <p class="card-text text-light">A trabajar toda empoderada</p>
+                  <p class="precio text-light">$22.100</p>
+                  <button class="btn btn-info">Lo quiero!</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- PIE DE PAGINA -->
+        <footer >
+          <div class="row">
+            <div class="col-lg-4 col-4">
+              <img src="img/delivery.png" class="img-fluid" alt="" width="100" height="100">
+              </div>
+              <div class="col-lg-4 col-4">
+                <img src="img/forma de pago.png" class="img-fluid" alt="" width="100" height="100">
+                </div>
+                <div class="col-lg-4 col-4">
+                  <img src="img/contacto whatsapp.png" class="img-fluid" alt="" width="100" height="100">
+                  </div>
+          </div>
           <div class="row">
             <div class="col-lg-12 col-12">
-            <area> Aca necesito espacio </area>
-            </div>
-          </div>
-        </div>
-        <footer class="row">
-          <div class="col-lg-2 col-2">
-            <img src="img/Rose Gold Black Elegant Luxury Circle Beauty Logo.png" class="img-fluid" alt="" width="100" height="100">
-          </div>
-          <div class="col-lg-4 col-12">
-            <h3> Redes Sociales </h3>
-          </div>
-          <div class="col-lg-4 col-12">
-            <h3> Contacto </h3>
-          </div>
+              <div class="row">
+                <div class="col-lg-4 col-4">
+                  <div class="text bg-light">
+                    <div class="text-Start">
+                      <h5 class="text-Start text-dark">Envios a todo el pais</h5>
+                      <p class="text-Start text-dark">Gratis para compras superiores a $30.000</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-4">
+                  <div class="text bg-light">
+                    <div class="text-Start">
+                      <h5 class="text-Start text-dark">Elije la forma de pago</h5>
+                      <p class="text-Start text-dark">Todas las tarjetas, transferencia o deposito</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-4">
+                  <div class="text bg-light">
+                    <div class="text-Start">
+                      <h5 class="text-Start text-dark">Contactate con nosotros</h5>
+                      <p class="text-Start text-dark">WhatSapp</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        <footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h3 class="text-Start">Redes sociales</h3>
+        <a href="#" class="btn btn-dark"><i class="fab fa-facebook-f"></i> Facebook</a>
+        <a href="#" class="btn btn-dark"><i class="fab fa-instagram"></i> Instagram</a>
+      </div>
+      <div class="col-md-4">
+        <h3 class="text-center">Contacto y ubicación</h3>
+        <p class="text-center">Dirección: Av. Belgrano 222, Alta Gracia, Córdoba</p>
+        <p class="text-center">Teléfono: +54 354752740</p>
+        <p class="text-center">Email: amore.bame@gmail.com</p>
+      </div>
+      <div class="col-md-4">
+        <h3 class="text-end">Política de privacidad</h3>
+        <ul class="list-unstyled">
+          <li class="text-end"><a href="#">Términos y condiciones</a></li>
+          <li class="text-end"><a href="#">Política de privacidad</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
