agregamos la pagina CONTACTO y la linkiamos

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link active fs-5" aria-current="page" href="#">CONTACTO</a>
+          <a class="nav-link active fs-5" aria-current="page" href="/pages/CONTACTO.html">CONTACTO</a>
         </li>
       </ul>
       <form class="d-flex" role="Buscar">
@@ -255,8 +255,8 @@
     <div class="row">
       <div class="col-md-4">
         <h3 class="text-Start">Redes sociales</h3>
-        <a href="#" class="btn btn-dark"><i class="fab fa-facebook-f"></i> Facebook</a>
-        <a href="#" class="btn btn-dark"><i class="fab fa-instagram"></i> Instagram</a>
+        <a href="https://www.facebook.com/amore.indumentaria.accesorios" class="btn btn-dark"><i class="fab fa-facebook-f"></i> Facebook</a>
+        <a href="https://www.instagram.com/amore.bame" class="btn btn-dark"><i class="fab fa-instagram"></i> Instagram</a>
       </div>
       <div class="col-md-4">
         <h3 class="text-center">Contacto y ubicación</h3>
