--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <h3 class="text-Start">Redes sociales</h3>
-        <a href="#" class="btn btn-dark"><i class="fab fa-facebook-f"></i> Facebook</a>
+        <h3 class="text-center">Redes sociales</h3>
+        <a href="#" class="btn btn-dark" ><i class="fab fa-facebook-f"></i> Facebook</a>
         <a href="#" class="btn btn-dark"><i class="fab fa-instagram"></i> Instagram</a>
       </div>
       <div class="col-md-4">
@@ -265,10 +265,10 @@
         <p class="text-center">Email: amore.bame@gmail.com</p>
       </div>
       <div class="col-md-4">
-        <h3 class="text-end">Política de privacidad</h3>
+        <h3 class="text-center">Política de privacidad</h3>
         <ul class="list-unstyled">
-          <li class="text-end"><a href="#">Términos y condiciones</a></li>
-          <li class="text-end"><a href="#">Política de privacidad</a></li>
+          <li class="text-center"><a href="#">Términos y condiciones</a></li>
+          <li class="text-center"><a href="#">Política de privacidad</a></li>
         </ul>
       </div>
     </div>
