vinculamos las distintas paginas

--- a/pages/CONTACTO.html
+++ b/pages/CONTACTO.html
@@ -24,10 +24,10 @@
   <div class="collapse navbar-collapse" id="navbarScroll">
     <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
       <li class="nav-item">
-        <a class="nav-link active fs-5" aria-current="page" href="#">Iniciar Sesión</a>
+        <a class="nav-link active fs-5" aria-current="page" href="Iniciar Sesion.html">Iniciar Sesión</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active fs-5" aria-current="page" href="#">NOVEDADES</a>
+        <a class="nav-link active fs-5" aria-current="page" href="Novedades.html">NOVEDADES</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle active fs-5" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
