--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
             <!-- LOGO + NAV -->
             <nav class="navbar navbar-expand-lg bg-secondary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="img/Rose Gold Black Elegant Luxury Circle Beauty Logo.png" alt="logo" width="50" height="50"> </a>
+    <a class="navbar-brand" href="#"><img src="img/Rose Gold Black Elegant Luxury Circle Beauty Logo.png" alt="HOME" width="50" height="50"> </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarScroll">
       <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
         <li class="nav-item">
-          <a class="nav-link active fs-5" aria-current="page" href="#">Iniciar Sesión</a>
+          <a class="nav-link active fs-5" aria-current="page" href="pages/Iniciar Sesion.html">Iniciar Sesión</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active fs-5" aria-current="page" href="#">NOVEDADES</a>
+          <a class="nav-link active fs-5" aria-current="page" href="pages/Novedades.html">NOVEDADES</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle active fs-5" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -42,7 +42,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link active fs-5" aria-current="page" href="#">CONTACTO</a>
+          <a class="nav-link active fs-5" aria-current="page" href="pages/Contacto.html">CONTACTO</a>
         </li>
       </ul>
       <form class="d-flex" role="Buscar">
@@ -67,8 +67,8 @@
               <div class="carousel-item active">
               <img src="img/rulos canva.png" class="d-block w-100" alt="..." width="100" height="400" > 
                 <div class="carousel-caption d-none d-md-block">
-                <h1 class="text-center text-dark"> AMORE </h1>
-                <h3 class="text-center text-dark">TU TIENDA - TU LUGAR</h3>
+                <h1 class="text-dark"> AMORE </h1>
+                <h3 class="text-dark">TU TIENDA - TU LUGAR</h3>
                 </div>
               </div>
             <div class="carousel-item">
