--- a/pages/Iniciar Sesion.html
+++ b/pages/Iniciar Sesion.html
@@ -24,7 +24,7 @@
   <div class="collapse navbar-collapse" id="navbarScroll">
     <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
       <li class="nav-item">
-        <a class="nav-link active fs-5" aria-current="page" href="#">Iniciar Sesión</a>
+        <a class="nav-link active fs-5" aria-current="page" href="Iniciar Sesion.html">Iniciar Sesión</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active fs-5" aria-current="page" href="#">NOVEDADES</a>
@@ -42,7 +42,7 @@
         </ul>
       </li>
       <li class="nav-item">
-        <a class="nav-link active fs-5" aria-current="page" href="">CONTACTO</a>
+        <a class="nav-link active fs-5" aria-current="page" href="Contacto.html">CONTACTO</a>
       </li>
     </ul>
     <form class="d-flex" role="Buscar">
