--- a/pages/Novedades.html
+++ b/pages/Novedades.html
@@ -17,14 +17,14 @@
           <!-- LOGO + NAV -->
           <nav class="navbar navbar-expand-lg bg-secondary">
 <div class="container-fluid">
-  <a class="navbar-brand" href="#"><img src="img/Rose Gold Black Elegant Luxury Circle Beauty Logo.png" alt="logo" width="50" height="50"> </a>
+  <a class="navbar-brand" href="/index.html"><img src="img/Rose Gold Black Elegant Luxury Circle Beauty Logo.png" alt="logo" width="50" height="50"> </a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarScroll">
     <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
       <li class="nav-item">
-        <a class="nav-link active fs-5" aria-current="page" href="#">Iniciar Sesión</a>
+        <a class="nav-link active fs-5" aria-current="page" href="Iniciar Sesion.html">Iniciar Sesión</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active fs-5" aria-current="page" href="#">NOVEDADES</a>
@@ -42,7 +42,7 @@
         </ul>
       </li>
       <li class="nav-item">
-        <a class="nav-link active fs-5" aria-current="page" href="">CONTACTO</a>
+        <a class="nav-link active fs-5" aria-current="page" href="Contacto.html">CONTACTO</a>
       </li>
     </ul>
     <form class="d-flex" role="Buscar">
