--- a/pages/CONTACTO.html
+++ b/pages/CONTACTO.html
@@ -17,7 +17,7 @@
           <!-- LOGO + NAV -->
           <nav class="navbar navbar-expand-lg bg-secondary">
 <div class="container-fluid">
-  <a class="navbar-brand" href="#"><img src="img/Rose Gold Black Elegant Luxury Circle Beauty Logo.png" alt="logo" width="50" height="50"> </a>
+  <a class="navbar-brand" href="/index.html"><img src="img/Rose Gold Black Elegant Luxury Circle Beauty Logo.png" alt="HOME" width="50" height="50"> </a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
