--- a/pages/Iniciar Sesion.html
+++ b/pages/Iniciar Sesion.html
@@ -17,7 +17,7 @@
           <!-- LOGO + NAV -->
           <nav class="navbar navbar-expand-lg bg-secondary">
 <div class="container-fluid">
-  <a class="navbar-brand" href="#"><img src="img/Rose Gold Black Elegant Luxury Circle Beauty Logo.png" alt="logo" width="50" height="50"> </a>
+  <a class="navbar-brand" href="/index.html"><img src="img/Rose Gold Black Elegant Luxury Circle Beauty Logo.png" alt="HOME" width="50" height="50"> </a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -53,6 +53,36 @@
 </div>
 </nav>
 <body>
+  <!-- FORMULARIO DE INICIAR SESION-->
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-6 col-md-8">
+        <div class="card shadow-lg">
+          <div class="card-body p-4">
+            <h3 class="text-center mb-4">Iniciar sesión</h3>
+            <form>
+              <div class="form-floating mb-3">
+                <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                <label for="inputEmail">Email</label>
+              </div>
+              <div class="form-floating mb-3">
+                <input type="password" class="form-control" id="inputPassword" placeholder="Contraseña">
+                <label for="inputPassword">Contraseña</label>
+              </div>
+              <div class="d-grid gap-2 mb-3">
+                <button type="submit" class="btn btn-primary">Ingresar</button>
+              </div>
+            </form>
+            <hr class="my-4">
+            <div class="text-center">
+              <p>¿No tienes una cuenta? <a button type="submit" class="btn btn-success"> Registrarse aqui </button></a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+      
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" 
     crossorigin="anonymous"></script>
