--- a/index.html
+++ b/index.html
@@ -15,43 +15,45 @@
       <header class="row">
          <div class="col-lg-12 col-12">
             <!-- LOGO + NAV -->
-            <nav class="navbar navbar-expand-lg bg-secondary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="img/Rose Gold Black Elegant Luxury Circle Beauty Logo.png" alt="HOME" width="50" height="50"> </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarScroll">
-      <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-        <li class="nav-item">
-          <a class="nav-link active fs-5" aria-current="page" href="pages/Iniciar Sesion.html">Iniciar Sesión</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active fs-5" aria-current="page" href="pages/Novedades.html">NOVEDADES</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle active fs-5" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            PRODUCTOS
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Pantalones</a></li>
-            <li><a class="dropdown-item" href="#">Remeras/Camisas</a></li>
-            <li><a class="dropdown-item" href="#">Abrigo</a></li>
-            <li><a class="dropdown-item" href="#">Zapatos</a></li>
-            <li><a class="dropdown-item" href="#">Bolsos y carteras</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active fs-5" aria-current="page" href="pages/Contacto.html">CONTACTO</a>
-        </li>
-      </ul>
-      <form class="d-flex" role="Buscar">
-        <input class="form-control me-2" type="Buscar" placeholder="Buscar" aria-label="Buscar">
-        <button class="btn btn-dark" type="submit">Buscar</button>
-      </form>
-    </div>
-  </div>
-</nav>
+            <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+              <div class="container-fluid">
+                <a class="navbar-brand" href="index.html"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                      <a class="nav-link" href="index.html">HOME</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        PRODUCTOS
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Pantalones</a></li>
+                        <li><a class="dropdown-item" href="#">Remeras</a></li>
+                        <li><a class="dropdown-item" href="#">Abrigo</a></li>
+                        <li><a class="dropdown-item" href="#">Bolsos</a></li>
+                        <li><a class="dropdown-item" href="#">Calzado</a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                  <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                      <a class="nav-link" href="pages/Novedades.html">NOVEDADES</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="pages/Contacto.html">CONTACTO</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="pages/Iniciar Sesion.html">INICIAR SESIÓN</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
+            
         <!-- CARRUSEL -->  
          </div>
         </header>
@@ -65,26 +67,27 @@
               </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-              <img src="img/rulos canva.png" class="d-block w-100" alt="..." width="100" height="400" > 
+              <img src="img/rulos canva.png" class="d-block w-100" alt="..." width="1200" height="500" > 
                 <div class="carousel-caption d-none d-md-block">
                 <h1 class="text-dark"> AMORE </h1>
                 <h3 class="text-dark">TU TIENDA - TU LUGAR</h3>
                 </div>
               </div>
             <div class="carousel-item">
-              <img src="img/Mujeres.png" class="d-block w-100" alt="..." width="100" height="400" >
+              <img src="img/Mujeres.png" class="d-block w-100" alt="..." width="1200" height="500">
                 <div class= "carousel-caption d-none d-md-block" >
               <h1 class="text-light">NOVEDADES</h1>
               <h6>COLECCIÓN OTOÑO-INVIERNO 2023</h6>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="img/Sombrero.png" class="d-block w-100" alt="..." width="100" height="400" >
+              <img src="img/Sombrero.png" class="d-block w-100" alt="..." width="1200" height="500" >
               <div class="carousel-caption d-none d-md-block">
               <h1 class="text-dark">ESTILO</h1>
               <h6 class="text-dark">TU PERSONALIDAD A LA VISTA</h6>
               </div>
             </div>
+          </div>
           </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
