--- a/pages/CONTACTO.html
+++ b/pages/CONTACTO.html
@@ -42,7 +42,7 @@
         </ul>
       </li>
       <li class="nav-item">
-        <a class="nav-link active fs-5" aria-current="page" href="">CONTACTO</a>
+        <a class="nav-link active fs-5" aria-current="page" href="/pages/Contacto.html">CONTACTO</a>
       </li>
     </ul>
     <form class="d-flex" role="Buscar">
@@ -88,7 +88,7 @@
           <p>Seguinos en nuestras redes sociales:</p>
         <div class="social-icons">
           <a href="https://www.facebook.com/amore.indumentaria.accesorios"><img src="/img/facelog.jpg" alt="Facebook" width="100" height="100"></a>
-          <a href="https://www.instagram.com/amore.bame"><img src="/img/instalog.png" alt="Instagram"></a>
+          <a href="https://www.instagram.com/amore.bame"><img src="/img/instalog.png" alt="Instagram" width="100" height="100"></a>
         </div>
       </div>
     </div>
