--- a/pages/Iniciar Sesion.html
+++ b/pages/Iniciar Sesion.html
@@ -27,7 +27,7 @@
         <a class="nav-link active fs-5" aria-current="page" href="Iniciar Sesion.html">Iniciar Sesión</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active fs-5" aria-current="page" href="#">NOVEDADES</a>
+        <a class="nav-link active fs-5" aria-current="page" href="/pages/Novedades.html">NOVEDADES</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle active fs-5" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -81,8 +81,7 @@
         </div>
       </div>
     </div>
-  </div>
-      
+  </div>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" 
     crossorigin="anonymous"></script>
